variables.Variables.scala.error
Erreur de compilation :
Variables:6: error: not found: value X
X = nbPas
^Variables:7: error: not found: value nbPas
nbPas=0
^Variables:8: error: not found: value nbPas
nbPas = nBPas + 1 
^