variables.Variables.scala.code
while(!estSurBiscuit()) {
  avance()
}
{prendBiscuit()
}
X = nbPas
nbPas=0
nbPas = nBPas + 1